--- a/gallery/src/main/AndroidManifest.xml
+++ b/gallery/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.namhv.gallery">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.namhv.gallery">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
@@ -12,45 +12,34 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Dark">
         <activity
-            android:name="com.namhv.gallery.activities.GalleryMainActivity">
+            android:name="com.namhv.sample.SampleActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
 
-            <intent-filter>
-                <action android:name="android.intent.action.PICK"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-
-                <data android:mimeType="image/*"/>
-                <data android:mimeType="video/*"/>
-                <data android:mimeType="vnd.android.cursor.dir/image"/>
-                <data android:mimeType="vnd.android.cursor.dir/video"/>
-            </intent-filter>
-
-            <intent-filter>
-                <action android:name="android.intent.action.GET_CONTENT"/>
-
-                <category android:name="android.intent.category.OPENABLE"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-
-                <data android:mimeType="image/*"/>
-                <data android:mimeType="video/*"/>
-                <data android:mimeType="vnd.android.cursor.dir/image"/>
-                <data android:mimeType="vnd.android.cursor.dir/video"/>
-            </intent-filter>
+        <activity
+            android:name=".activities.GalleryActivity"
+            android:label="@string/title_activity_sample"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".activities.MediaActivity"
-            android:parentActivityName=".activities.GalleryMainActivity"/>
+            android:label="@string/app_name"
+            android:parentActivityName=".activities.GalleryActivity"
+            android:screenOrientation="portrait"/>
         <activity
-            android:configChanges="orientation|screenSize"
             android:name="com.namhv.image_crop.CropImageActivity"
-            android:label="@string/app_name" />
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name="com.namhv.image_crop.ResultActivity">
-        </activity>
+            android:name="com.namhv.image_crop.ResultActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
     </application>
+
 </manifest>
